@@ -15,7 +15,10 @@
 
     <name>authentication-service</name>
     <description>Maven project of MOSIP ID-Authentication Service</description>
-
+    <properties>
+    <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+        <jacoco.maven.plugin.version>0.8.11</jacoco.maven.plugin.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>io.mosip.authentication</groupId>
@@ -300,11 +303,6 @@
             <version>${biosdk-client.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.mosip.kernel</groupId>
-            <artifactId>kernel-auth-adapter</artifactId>
-            <version>${kernel-auth-adapter.version}</version>
-        </dependency>
-        <dependency>
             <groupId>io.mosip.demosdk</groupId>
             <artifactId>demosdk</artifactId>
             <version>${demosdk.version}</version>
@@ -400,6 +398,39 @@
                                 <goals>
                                     <goal>build-info</goal>
                                     <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.0</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <skip>false</skip>
+                            <argLine>
+                                ${argLine} --add-opens
+                                java.xml/jdk.xml.internal=ALL-UNNAMED
+                                --illegal-access=permit
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>${jacoco.maven.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>report</goal>
                                 </goals>
                             </execution>
                         </executions>
